--- a/assets/css/foodCongStyle.css
+++ b/assets/css/foodCongStyle.css
@@ -24,43 +24,51 @@ ul{
 
 /* start header */
 header{
+    background-color: #29b373;
     position: relative;
-    margin-bottom: 35px;
+    /* margin-bottom: 35px; */
     /* padding-bottom: 35px; */
     /* border-bottom: 5px solid #027cc2; */
 }
-header .left-part img{
-    width: 100%;
-    min-height: 100px;
-    margin-top: 25px;
+header .left-part img {
+    width: 90%;
+    min-height: 85px;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     cursor: pointer;
 }
-header .right-part{
+/* header .right-part{
     width: 74%;
     position: absolute;
     right: 0;
     top: 0;
-}
-header .right-part .top-nav{
-    background-color: #027cc2;
-    padding: 0 20px;
+} */
+header .right-part .top-nav {
     color: #fff;
-    min-height: 70px;
+    min-height: 40px;
     display: flex;
     align-items: center;
+    margin-top: 3%;
 }
 header .right-part .top-nav ul li a{
     text-decoration: none;
     color: #fff;
+    font-size: 14px;
+    font-family: bruumBoldFont;
 }
 header .right-part .top-nav ul li{
     margin-right: 21px;
     position: relative;
     cursor: pointer;
+    font-size: 14px;
+    font-family: bruumBoldFont;
 }
-header .right-part .top-nav ul li:hover{
+/* header .right-part .top-nav ul li:hover{
     border-bottom: 1px solid #fff;
-}
+} */
 header .right-part .top-nav ul li:not(:last-child)::after{
     content: '';
     position: absolute;
@@ -70,11 +78,11 @@ header .right-part .top-nav ul li:not(:last-child)::after{
     bottom: 2px;
     background-color: #fff;
 }
-header .nav1{
-    padding: 0 20px;
+header .nav1 {
+    color: #fff;
+    border-top: 1px solid #fff;
     position: absolute;
-    width: 100%;
-    min-height: 70px;
+    min-height: 40px;
     display: flex;
     align-items: center;
 }
@@ -96,7 +104,7 @@ header .nav1 ul li:not(:last-child)::after{
     margin-left: 9px;
     height: 18px;
     bottom: 2px;
-    background-color: #000;
+    background-color: #fff;
 }
 
 .border-right {
@@ -138,10 +146,10 @@ header .nav2 ul li{
     align-items: center; */
     width: 90%;
 }
-.counter-top .btns .btn-primary{
-    background-color: #027cc2;
+.counter-top .btn-danger{
     padding: 5px 10px;
     color: #f1efef;
+    background-color: #bd1e2d;
     border: none;
     width: 80%;
     display: flex;
@@ -149,8 +157,11 @@ header .nav2 ul li{
     align-items: center;
     margin: auto;
 }
+.counter-top .btns .btn-primary{
+    background-color: #027cc2;
+}
 .counter-top p{
-    font-size: 15px;
+    font-size: 16px;
     margin-bottom: 0;
     text-align: center;
     color: #c3c3c3;
@@ -164,7 +175,7 @@ header .nav2 ul li{
 }
 .counter h2{
     font-family: bruumBoldFont;
-    color: #027cc2;
+    color: #29b373;
     font-size: 30px;
     font-weight: bold;
     margin: 5px;
@@ -184,18 +195,18 @@ header .nav2 ul li{
     font-family: bruumBoldFont;
     font-size: 28px;
     margin-bottom: 30px;
-    border-left: 4px solid #027cc2;
+    border-left: 4px solid #29b373;
     padding-left: 20px;
 }
 .datamatix-section .lists ul li{
     text-transform: capitalize;
 }
 .datamatix-section p{
-    font-size: 21px;
+    font-size: 22px;
     line-height: 32px;
 }
 .datamatix-section a{
-    color: #027cc2 !important;
+    color: #29b373 !important;
     font-size: 17px;
     cursor: pointer;
     text-decoration: none;
@@ -216,7 +227,7 @@ header .nav2 ul li{
 
 /* start banners */
 .bannerTop{
-    background-image: url(./../img/imageeBanner.png);
+    background-image: url(./../img/Food_Congress_image_2.jpg);
     width: 100%;
     height: 580px;
     background-size: cover;
@@ -240,31 +251,31 @@ header .nav2 ul li{
 .banner.bannerLeft{
     background-position: left;
 }
-.banner.bannerLeft .banner-text{
+/* .banner.bannerLeft .banner-text{
     margin-left: 5%;
 }
 .banner.bannerRight .banner-text{
     margin-right: 5%;
-}
+} */
 .banner-1{
-    background-image: url(./../img/10th_banner_1.jpg);
-    border-bottom: 10px solid #027cc2;
+    background-image: url(./../img/Food_Congress_image_3.jpg);
+    /* border-bottom: 10px solid #29b373; */
     margin-bottom: 30px;
 }
 .banner-2{
-    background-image: url(./../img/10th_banner_2.jpg);
+    background-image: url(./../img/Food_Congress_image_4.jpg);
     /* margin-bottom: -5px; */
 }
 .banner-3{
-    background-image: url(./../img/10th_banner_3.jpg);
+    background-image: url(./../img/Food_Congress_image_5.jpg);
     /* border-top: 10px solid #027cc2; */
 }
 .banner-4{
-    background-image: url(./../img/10th_banner_4.jpg);
+    background-image: url(./../img/Food_Congress_image_6.jpg);
     /* margin-bottom: -5px; */
 }
 .banner-5{
-    background-image: url(./../img/10th_banner_5.jpg);
+    background-image: url(./../img/Food_Congress_image_7.jpg);
     /* margin-bottom: -5px; */
 }
 /* .banner-6{
@@ -276,12 +287,12 @@ header .nav2 ul li{
     position: relative;
     /* color: #027cc2; */
     font-family: bruumBoldFont;
-    font-size: 38px;
-    line-height: 40px;
-    margin-top: 90%;
+    font-size: 40px;
+    line-height: 42px;
+    margin-top: 65%;
 }
 .banner .banner-text hr{
-    border-top: 2px solid #027cc2;
+    border-top: 2px solid #29b373;
     width: 70%;
     margin-left: 0;
     border-width: 1px;
@@ -292,11 +303,16 @@ header .nav2 ul li{
 }
 .banner .banner-text p{
     font-size: 18px;
-    /* margin-top: 10px; */
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 90%;
 }
-.banner .banner-text .btn-primary{
-    background-color: #027cc2;
-    border: #027cc2;
+.banner.bannerRight p{
+    margin-left: auto;
+}
+.banner .banner-text .btn-success{
+    background-color: #29b373;
+    border: #29b373;
     border-radius: 5px;
     padding: 4px 14px;
 }
@@ -307,11 +323,12 @@ header .nav2 ul li{
     margin-bottom: 25px;
 }
 .gallery button.btn{
+    background-color: #29b373;
+    border-color: #29b373;
     display: block;
     margin-top: 20px;
     margin-bottom: 40px;
     padding: 5px;
-    /* width: 90%; */
     min-width: 320px;
     border-radius: 0;
 }
@@ -394,7 +411,7 @@ footer .logo img.logo2{
     font-family: boldFont;
 } */
 footer h5{
-    color: #027cc2;
+    color: #29b373;
     font-size: 17px;
     font-family: bruumBoldFont;
 }
@@ -404,11 +421,11 @@ footer .links span{
     cursor: pointer;
 }
 footer .links span:hover{
-    color: #0c4f75;
+    color: #239b63;
     font-weight: 700;
 }
 footer .subscribe-label{
-    color: #027cc2;
+    color: #29b373;
     font-size: 17px;
 }
 footer p.footr{
@@ -417,7 +434,7 @@ footer p.footr{
 }
 footer .copy-right{
     margin-top: 50px;
-    background-color: #027cc2;
+    background-color: #29b373;
     color: #fff;
 }
 footer .copy-right p{
@@ -428,11 +445,11 @@ footer .copy-right p{
     color: #fff
 }
 footer form input, footer form .btn{
-    max-height: 35px;
-    background-color: #027cc2;
+    max-height: 33px;
+    background-color: #29b373;
 }
 footer form .btn{
-    font-size: 15px;
+    font-size: 14px;
 }
 /* end footer */
 
@@ -465,31 +482,33 @@ footer form .btn{
         transform: translateY(-50%);
     }
 }
-@media only screen and (max-width: 1199px) {
-    .gallery button.btn {
-        margin: 20px auto;
-        min-width: 85%;
+@media only screen and (max-width: 1044px) {
+    header .nav1 {
+        margin-top: 5px;
+        padding-top: 5px;
+    }
+    .banner.bannerLeft .banner-text{
+        margin-left: 5%;
+    }
+    .banner.banner.bannerRight .banner-text{
+        margin-right: 5%;
+    }
+    .banner .banner-text h3 {
+        font-size: 36px;
+        margin-top: 75%;
     }
 }
-@media only screen and (max-width: 1168px) {
-    header .right-part .top-nav ul li {
-        font-size: 14px;
-    }
-}
-@media only screen and (max-width: 1059px) {
-    /* header .nav1{
-        margin-top: 0;
-        margin-bottom: 0;
-        padding: 25px;
-    } */
-    header .nav1 ul li {
-        font-size: 12px;
-    }
-}
+
 @media only screen and (max-width: 1024px) {
     /* header .nav1{
         padding-bottom: 10px;
     } */
+}
+@media only screen and (max-width: 1199px){
+    .gallery button.btn {
+        margin: 20px auto;
+        min-width: 85%;
+    }
 }
 @media only screen and (max-width: 1109px) {
     .counter-top .btns {
@@ -513,7 +532,7 @@ footer form .btn{
         margin-right: 5%;
     }
     .banner .banner-text{
-        margin-top: -10%;
+        margin-top: -22%;
     }
     .banner {
         height: 560px;
@@ -529,9 +548,6 @@ footer form .btn{
     }
     .banner .banner-text h3 br{
         display: none;
-    }
-    .banner .banner-text h3 {
-        line-height: 27px;
     }
     .events h3 {
         margin: 25px 0;
@@ -560,17 +576,14 @@ footer form .btn{
     }
 }
 @media only screen and (max-width: 940px) {
-
+    header .left-part img{
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 798px) {
     header .nav2 {
         padding: 3px 0;
-    }
-}
-@media only screen and (max-width: 886px) and (min-width: 843px)  {
-    .counter-top button.btn {
-        font-size: 13px;
     }
 }
 @media only screen and (max-width: 842px) and (min-width: 768px)  {
@@ -606,11 +619,6 @@ footer form .btn{
     header .right-part .top-nav ul li:not(:last-child)::after{
         position: relative;
     }
-    header .nav1 ul li{
-        width: 40%;
-        margin: 5px auto;
-        display: inline-block;
-    }
     header .nav1 ul li:not(:last-child)::after{
         position: relative;
         width: 20%;
@@ -621,7 +629,7 @@ footer form .btn{
     }
     header .nav1{
         position: relative;
-        width: 100%;
+        width: 90%;
         padding: 25px;
         margin: 0;
     }
@@ -651,9 +659,9 @@ footer form .btn{
     .datamatix-section p {
         font-size: 14px;
     }
-    .gallery button.btn{
+    .gallery button.btn {
+        width: 50%;
         margin: 20px auto;
-        min-width: 85%;
     }
     .banner_title{
         font-size: 22px;
@@ -679,7 +687,7 @@ footer form .btn{
     }
     .banner .banner-text h3{
         margin-top: 44%;
-        color: #027cc2;
+        color: #29b373;
     }
     .banner .banner-text hr {
        margin: auto;
@@ -820,7 +828,7 @@ footer form .btn{
 }
 @media only screen and (max-width: 460px){
     header .nav1 ul li{
-        font-size: 11px;
+        width: 35%;
     }
 }
 @media only screen and (max-width: 418px){
@@ -834,6 +842,7 @@ footer form .btn{
         font-size: 14px;
         display: block;
         width: 100%;
+        margin: 5px auto;
     }
     /* .banner .banner-text h3 {
         margin-top: 40%;
