--- a/assets/css/foodEventStyle.css
+++ b/assets/css/foodEventStyle.css
@@ -24,43 +24,50 @@ ul{
 
 /* start header */
 header{
+    background-color: #29b373;
     position: relative;
-    margin-bottom: 35px;
     /* padding-bottom: 35px; */
-    /* border-bottom: 5px solid #027cc2; */
+    /* border-bottom: 5px solid #29b373; */
 }
-header .left-part img{
-    width: 100%;
-    min-height: 100px;
-    margin-top: 25px;
+header .left-part img {
+    width: 90%;
+    min-height: 85px;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     cursor: pointer;
 }
-header .right-part{
+/* header .right-part{
     width: 74%;
     position: absolute;
     right: 0;
     top: 0;
-}
-header .right-part .top-nav{
-    background-color: #027cc2;
-    padding: 0 20px;
+} */
+header .right-part .top-nav {
     color: #fff;
-    min-height: 70px;
+    min-height: 40px;
     display: flex;
     align-items: center;
+    margin-top: 3%;
 }
 header .right-part .top-nav ul li a{
     text-decoration: none;
     color: #fff;
+    font-size: 14px;
+    font-family: bruumBoldFont;
 }
 header .right-part .top-nav ul li{
     margin-right: 21px;
     position: relative;
     cursor: pointer;
+    font-size: 14px;
+    font-family: bruumBoldFont;
 }
-header .right-part .top-nav ul li:hover{
+/* header .right-part .top-nav ul li:hover{
     border-bottom: 1px solid #fff;
-}
+} */
 header .right-part .top-nav ul li:not(:last-child)::after{
     content: '';
     position: absolute;
@@ -70,17 +77,17 @@ header .right-part .top-nav ul li:not(:last-child)::after{
     bottom: 2px;
     background-color: #fff;
 }
-header .nav1{
-    padding: 0 20px;
+header .nav1 {
+    color: #fff;
+    border-top: 1px solid #fff;
     position: absolute;
-    width: 100%;
-    min-height: 70px;
+    min-height: 40px;
     display: flex;
     align-items: center;
 }
 
 /* header .nav1 ul li:first-of-type{
-    border-top: 4px solid #027cc2;
+    border-top: 4px solid #29b373;
 } */
 header .nav1 ul li{
     font-size: 14px;
@@ -96,7 +103,7 @@ header .nav1 ul li:not(:last-child)::after{
     margin-left: 9px;
     height: 18px;
     bottom: 2px;
-    background-color: #000;
+    background-color: #fff;
 }
 
 .border-right {
@@ -144,7 +151,7 @@ header .nav2 ul li{
     color: #f1efef;
 }
 .counter-top .btns .btn-primary{
-    background-color: #027cc2;
+    background-color: #29b373;
 }
 .counter-top p{
     font-size: 16px;
@@ -161,7 +168,7 @@ header .nav2 ul li{
 }
 .counter h2{
     font-family: bruumBoldFont;
-    color: #027cc2;
+    color: #29b373;
     font-size: 30px;
     font-weight: bold;
     margin: 5px;
@@ -181,18 +188,18 @@ header .nav2 ul li{
     font-family: bruumBoldFont;
     font-size: 28px;
     margin-bottom: 30px;
-    /* border-left: 4px solid #027cc2;
+    /* border-left: 4px solid #29b373;
     padding-left: 20px; */
 }
 .datamatix-section .lists ul li{
     text-transform: capitalize;
 }
 .datamatix-section p{
-    font-size: 21px;
+    font-size: 22px;
     line-height: 32px;
 }
 .datamatix-section a{
-    color: #027cc2 !important;
+    color: #29b373 !important;
     font-size: 17px;
     cursor: pointer;
     text-decoration: none;
@@ -213,7 +220,7 @@ header .nav2 ul li{
 
 /* start banners */
 .bannerTop{
-    background-image: url(./../img/imageeBanner.png);
+    background-image: url(./../img/Food_Congress_image_2.jpg);
     width: 100%;
     height: 580px;
     background-size: cover;
@@ -224,7 +231,7 @@ header .nav2 ul li{
     width: 100%;
 }
 .banner{
-    /* border-bottom: 10px solid #027cc2; */
+    /* border-bottom: 10px solid #29b373; */
     width: 100%;
     height: 780px;
     background-size: cover;
@@ -237,15 +244,15 @@ header .nav2 ul li{
 .banner.bannerLeft{
     background-position: left;
 }
-.banner.bannerLeft .banner-text{
+/* .banner.bannerLeft .banner-text{
     margin-left: 5%;
 }
 .banner.bannerRight .banner-text{
     margin-right: 5%;
-}
+} */
 .banner-1{
     background-image: url(./../img/10th_banner_6.jpg);
-    border-bottom: 10px solid #027cc2;
+    /* border-bottom: 10px solid #29b373; */
     margin-bottom: 30px;
 }
 .banner-2{
@@ -254,7 +261,7 @@ header .nav2 ul li{
 }
 .banner-3{
     background-image: url(./../img/10th_banner_3.jpg);
-    /* border-top: 10px solid #027cc2; */
+    /* border-top: 10px solid #29b373; */
 }
 .banner-4{
     background-image: url(./../img/10th_banner_4.jpg);
@@ -271,14 +278,14 @@ header .nav2 ul li{
 
 .banner .banner-text h3{
     position: relative;
-    /* color: #027cc2; */
+    /* color: #29b373; */
     font-family: bruumBoldFont;
-    font-size: 45px;
-    line-height: 50px;
-    margin-top: 70%;
+    font-size: 40px;
+    line-height: 42px;
+    margin-top: 65%;
 }
 .banner .banner-text hr{
-    border-top: 2px solid #027cc2;
+    border-top: 2px solid #29b373;
     width: 70%;
     margin-left: 0;
     border-width: 1px;
@@ -292,8 +299,8 @@ header .nav2 ul li{
     margin-top: 10px;
 }
 .banner .banner-text .btn-primary{
-    background-color: #027cc2;
-    border: #027cc2;
+    background-color: #29b373;
+    border: #29b373;
     border-radius: 5px;
     padding: 4px 14px;
 }
@@ -342,8 +349,8 @@ header .nav2 ul li{
     font-family: bruumLightFont;
 }
 .events button{
-    background-color: #1b75ba;
-    border-color: #1b75ba;
+    background-color: #29b373;
+    border-color: #29b373;
     width: 90%;
     position: absolute;
     bottom: 20px;
@@ -388,7 +395,7 @@ footer .logo img.logo2{
     font-family: boldFont;
 } */
 footer h5{
-    color: #027cc2;
+    color: #29b373;
     font-size: 17px;
     font-family: bruumBoldFont;
 }
@@ -398,11 +405,11 @@ footer .links span{
     cursor: pointer;
 }
 footer .links span:hover{
-    color: #0c4f75;
+    color: #129759;
     font-weight: 700;
 }
 footer .subscribe-label{
-    color: #027cc2;
+    color: #29b373;
     font-size: 17px;
 }
 footer p.footr{
@@ -411,7 +418,7 @@ footer p.footr{
 }
 footer .copy-right{
     margin-top: 50px;
-    background-color: #027cc2;
+    background-color: #29b373;
     color: #fff;
 }
 footer .copy-right p{
@@ -423,7 +430,7 @@ footer .copy-right p{
 }
 footer form input, footer form .btn{
     max-height: 35px;
-    background-color: #027cc2;
+    background-color: #29b373;
 }
 footer form .btn{
     font-size: 15px;
@@ -459,19 +466,10 @@ footer form .btn{
         transform: translateY(-50%);
     }
 }
-@media only screen and (max-width: 1168px) {
-    header .right-part .top-nav ul li {
-        font-size: 14px;
-    }
-}
-@media only screen and (max-width: 1059px) {
-    /* header .nav1{
-        margin-top: 0;
-        margin-bottom: 0;
-        padding: 25px;
-    } */
-    header .nav1 ul li {
-        font-size: 12px;
+@media only screen and (max-width: 1044px) {
+    header .nav1 {
+        margin-top: 5px;
+        padding-top: 5px;
     }
 }
 @media only screen and (max-width: 1024px) {
@@ -501,7 +499,7 @@ footer form .btn{
         margin-right: 5%;
     }
     .banner .banner-text{
-        margin-top: -10%;
+        margin-top: -22%;
     }
     .banner {
         height: 560px;
@@ -548,7 +546,9 @@ footer form .btn{
     }
 }
 @media only screen and (max-width: 940px) {
-
+    header .left-part img{
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 798px) {
@@ -599,7 +599,7 @@ footer form .btn{
     }
     header .nav1{
         position: relative;
-        width: 100%;
+        width: 90%;
         padding: 25px;
         margin: 0;
     }
@@ -657,7 +657,7 @@ footer form .btn{
     }
     .banner .banner-text h3{
         margin-top: 44%;
-        color: #027cc2;
+        color: #29b373;
     }
     .banner .banner-text hr {
        margin: auto;
