--- a/assets/css/foodCongStyle.css
+++ b/assets/css/foodCongStyle.css
@@ -181,7 +181,7 @@ header .nav2 ul li{
     margin: 5px;
 }
 .counter i{
-    font-size: 22px;
+    font-size: 35px;
     color: #888686;
 }
 .counter p{
@@ -415,6 +415,9 @@ footer h5{
     font-size: 17px;
     font-family: bruumBoldFont;
 }
+footer .links{
+    margin-bottom: 5px;
+}
 footer .links span{
     color: #3d3b3b;
     font-size: 14px;
@@ -427,6 +430,7 @@ footer .links span:hover{
 footer .subscribe-label{
     color: #29b373;
     font-size: 17px;
+    font-family: bruumBoldFont;
 }
 footer p.footr{
     font-size: 15px;
@@ -449,7 +453,18 @@ footer form input, footer form .btn{
     background-color: #29b373;
 }
 footer form .btn{
-    font-size: 14px;
+    font-size: 13px;
+    justify-content: center;
+    align-items: center;
+}
+footer .icon-download img{
+    margin-left: 25px;
+    min-height: 40px;
+    margin-top: -3px;
+}
+footer .social img{
+    margin-right: 10px;
+    cursor: pointer;
 }
 /* end footer */
 
