--- a/assets/css/foodStyle.css
+++ b/assets/css/foodStyle.css
@@ -146,7 +146,7 @@ header .nav2 ul li{
     align-items: center; */
     width: 90%;
 }
-.counter-top .btn-danger{
+.counter-top .btn{
     padding: 5px 10px;
     color: #f1efef;
     background-color: #bd1e2d;
@@ -156,6 +156,10 @@ header .nav2 ul li{
     justify-content: center;
     align-items: center;
     margin: auto;
+}
+.counter-top .btn a{
+    text-decoration: none;
+    color: #fff;
 }
 .counter-top .btns .btn-primary{
     background-color: #027cc2;
@@ -181,7 +185,7 @@ header .nav2 ul li{
     margin: 5px;
 }
 .counter i{
-    font-size: 22px;
+    font-size: 35px;
     color: #888686;
 }
 .counter p{
@@ -413,6 +417,9 @@ footer h5{
     font-size: 17px;
     font-family: bruumBoldFont;
 }
+footer .links{
+    margin-bottom: 5px;
+}
 footer .links span{
     color: #3d3b3b;
     font-size: 14px;
@@ -425,6 +432,7 @@ footer .links span:hover{
 footer .subscribe-label{
     color: #29b373;
     font-size: 17px;
+    font-family: bruumBoldFont;
 }
 footer p.footr{
     font-size: 15px;
@@ -447,7 +455,18 @@ footer form input, footer form .btn{
     background-color: #29b373;
 }
 footer form .btn{
-    font-size: 14px;
+    font-size: 13px;
+    justify-content: center;
+    align-items: center;
+}
+footer .icon-download img{
+    margin-left: 25px;
+    min-height: 40px;
+    margin-top: -3px;
+}
+footer .social img{
+    margin-right: 10px;
+    cursor: pointer;
 }
 /* end footer */
 
