--- a/assets/css/foodStyle.css
+++ b/assets/css/foodStyle.css
@@ -32,7 +32,7 @@ header{
 }
 header .left-part img {
     width: 90%;
-    min-height: 85px;
+    min-height: 65px;
     margin-top: 20px;
     margin-bottom: 25px;
     margin-left: auto;
@@ -208,6 +208,7 @@ header .nav2 ul li{
 .datamatix-section p{
     font-size: 22px;
     line-height: 32px;
+    width: 79%;
 }
 .datamatix-section a{
     color: #29b373 !important;
@@ -326,6 +327,10 @@ header .nav2 ul li{
 .categories img{
     margin-bottom: 25px;
 }
+.gallery{
+    width: 75%;
+    margin: 0 auto;
+}
 .gallery button.btn{
     background-color: #29b373;
     border-color: #29b373;
@@ -405,6 +410,7 @@ footer .logo {
 }
 footer .logo img{
     margin-top: -30%;
+    width: 90%;
 }
 footer .logo img.logo2{
     margin-top: -20%;
@@ -461,8 +467,10 @@ footer form .btn{
 }
 footer .icon-download img{
     margin-left: 25px;
-    min-height: 40px;
-    margin-top: -3px;
+    min-height: 44px;
+    margin-top: -5px;
+    width: 40%;
+    cursor: pointer;
 }
 footer .social img{
     margin-right: 10px;
@@ -740,8 +748,9 @@ footer .social img{
         margin-bottom: 20px;
     }
     footer .icon-download{
-        width: 50%;
-        margin: 5px auto;
+        width: 75%;
+        margin: 0 auto;
+        justify-content: center;
     }
     footer .social{
         width: 50%;
