--- a/assets/css/foodEventStyle.css
+++ b/assets/css/foodEventStyle.css
@@ -651,6 +651,7 @@ footer .social img{
     }
     .datamatix-section p {
         font-size: 14px;
+        width: 100%;
     }
     .gallery button.btn {
         width: 50%;
