--- a/assets/css/foodStyle.css
+++ b/assets/css/foodStyle.css
@@ -677,6 +677,7 @@ footer .social img{
     }
     .datamatix-section p {
         font-size: 14px;
+        width: 100%;
     }
     .gallery button.btn {
         width: 50%;
